# fleet-ca

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
common/: admin.py  api.py  apps.py  config.py  models.py  serializers.py  signals.py  spectacular_hooks.py  unfold.py  urls.py
common/services/: image.py
common/tests/: __init__.py  conftest.py  test_health.py
core/: settings.py  urls.py
workspace/: admin.py  api.py  apps.py  backends.py  models.py  rbac.py  role_defaults.py  serializers.py  urls.py
workspace/api/: billing.py  invites.py  memberships.py  organization.py  profile.py  subscriptions.py  workspaces.py
workspace/config/: __init__.py  display.py  permissions.py  plans.py  registry.py  types.py  utils.py
workspace/migrations/: 0001_initial.py  0002_historicalorganization_historicalsubscription_and_more.py  0002_organization_subscription_pending_plan_and_more.py  0002_subscription_deleted_subscription_deleted_by_cascade_and_more.py  0002_workspace_subscription_workspacerole_and_more.py  0003_historicalsubscription_auto_renew_and_more.py  0003_organization_owner_and_more.py
workspace/models/: __init__.py  organization.py  permission.py  subscription.py  workspace.py
workspace/serializers/: billing.py  invites.py  memberships.py  profile.py  registration.py  subscriptions.py  workspaces.py
workspace/services/: access_control.py  auth_backends.py  billing.py  onboarding.py  roles.py
workspace/tests/: conftest.py  test_authentication.py  test_onboarding_and_rbac.py
